Added search API

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
           <div class="slider-tab"></div>
         </div>
         <div class="form-inner">
-          <form action="#" class="login">
+          <form method="POST" action="api/login.php" class="login">
             <div class="field">
               <input type="text" placeholder="Username" required />
             </div>
