Added signup page php but however the local host doesn't sense it

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
               Not a member? <a href="">Signup now</a>
             </div>
           </form>
-          <form action="#" class="signup">
+          <form  method="POST" action="api/login.php" class="signup">
             <div class="field">
               <input type="text" placeholder="Username" required />
             </div>
