Fixed Login, and shows incorrect login, however not going to the next page?

--- a/src/index.html
+++ b/src/index.html
@@ -31,10 +31,10 @@ Signup Form</div>
 <div class="form-inner">
           <form action="#" class="login">
             <div class="field">
-              <input type="text" placeholder="Username" id="logUsername" required>
+              <input type="text" placeholder="Username" id="loginName" required>
             </div>
-<div class="field">
-              <input type="password" placeholder="Password" id="logPass" required>
+            <div class="field">
+              <input type="password" placeholder="Password" id="loginPassword" required>
             </div>
 <div class="pass-link">
 
@@ -42,7 +42,9 @@ Signup Form</div>
               <div class="btn-layer">
 </div>
 <input type="submit" value="Login" onclick ="doLogin();">
+
             </div>
+            <span id="loginResult"></span>
 <div class="signup-link">
 Not a member? <a href="Register.html">Signup now</a></div>
 </form>
