Added what was needed

--- a/src/Register.html
+++ b/src/Register.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="landing.css">
+  <script type="text/javascript" src="js/code.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
@@ -44,7 +45,7 @@ Signup Form</div>
 <div class="field btn">
             <div class="btn-layer">
 </div>
-<input type="submit" value="Register">
+<input type="submit" value="Register" onclick="doReg();"> 
           </div>
 <div class="signup-link">
  <a href="LogIn.html">Back to Log In Page</a></div>
