--- a/src/data.html
+++ b/src/data.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+  <script type="text/javascript" src="js/code.js"></script>
   <link rel="stylesheet" href="landing.css">
 <title>Add Contacts</title>
 <form id="form" role="search">
