Optimizations to contacts logic

--- a/src/contacts.html
+++ b/src/contacts.html
@@ -9,7 +9,9 @@
 <body>
   <p>Search: </p>
   <input type="textInput" name="search" id="contact-search">
-  <div id="contact-table"></div>
+  <div id="contact-table">
+    <!-- This gets auto-filled -->
+  </div>
   <script src="js/contacts.js"></script>
 </body>
 </html>
