--- a/src/data.html
+++ b/src/data.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
   <script type="text/javascript" src="js/code.js"></script>
-  <link rel="stylesheet" href="landing.css">
+  <link rel="stylesheet" href="css/landing.css">
 <title>Add Contacts</title>
 <form id="form" role="search">
   <input type="search" id="query" name="q"
