--- a/src/LogIn (1).html
+++ b/src/LogIn (1).html
@@ -5,7 +5,7 @@
     <title>Contact</title> 
     <script type="text/javascript" src="js/code.js"></script>
     <script type="text/javascript" src="js/md5.js"></script>
-    <link rel="stylesheet" href="landing.css">
+    <link rel="stylesheet" href="css/landing.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     
