--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
 
            <!-- <div class="btn-layer">
 </div> Doesn't work for some reason -->
-<button type="button" onclick ="doLogin();" value="Login"> Login </button>
+<button type="button" id="login-btn" onclick ="doLogin();" value="Login"> Login </button>
             </div>
             <span id="loginResult"></span>
 <div class="signup-link">
