Changes to login/register js
Created seperate register and login js files

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Contact</title> 
-    <script type="text/javascript" src="js/code.js"></script>
+    <script type="text/javascript" src="js/login.js"></script>
     <link rel="stylesheet" href="css/landing.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
@@ -38,8 +38,7 @@
 <div class="field btn">
 
 
-           <!-- <div class="btn-layer">
-</div> Doesn't work for some reason -->
+           
 <button type="button" id="login-btn" onclick ="doLogin();" value="Login"> Login </button>
             </div>
             <span id="loginResult"></span>
