--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Contact</title> 
     <script type="text/javascript" src="js/login.js"></script>
-    <link rel="stylesheet" href="css/landing.css">
+    <link rel="stylesheet" href="css/login.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
@@ -38,8 +38,9 @@
 <div class="field btn">
 
 
-           
-<button type="button" id="login-btn" onclick ="doLogin();" value="Login"> Login </button>
+<center>         
+<button class="button" id="login-btn" onclick ="doLogin();" value="Login"> Login </button>
+</center>
             </div>
             <span id="loginResult"></span>
 <div class="signup-link">
