--- a/src/Register.html
+++ b/src/Register.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="css/landing.css">
-  <script type="text/javascript" src="js/code.js"></script>
+  <link rel="stylesheet" href="css/register.css">
+  <script type="text/javascript" src="js/register.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
@@ -45,7 +45,9 @@ Signup Form</div>
 <div class="field btn">
             <!-- <div class="btn-layer">
 </div> -->
-<button value="Register" onclick="doReg();"> Register </button>
+<center>
+<button class="button" value="Register" onclick="doReg();"> Register </button>
+</center>
           </div>
           <span id="regAddResult"></span>
 <div class="signup-link">
