Search button update
Updated the search button

--- a/src/contactPage.html
+++ b/src/contactPage.html
@@ -8,10 +8,13 @@
 </form>
 </head>
 <body>
+    <form class="example" action=>
+    <input type="textInput" name="search" id="contact-search" placeholder="Search for Contacts..." >
+  <button id="search-btn">Search</button>
+    </form>
   <!--this is going to be for the add to contacts, we needs two seperate tables to do this-->
     <div class="container">
-      <input type="textInput" name="search" id="contact-search" placeholder="Search...">
-  <button id="search-btn">Search</button>
+      
   <center>  
     <div class="wrapper">  
         
