--- a/src/Register.html
+++ b/src/Register.html
@@ -46,14 +46,18 @@ Signup Form</div>
             <!-- <div class="btn-layer">
 </div> -->
 <center>
-<button class="button" value="Register" onclick="doReg();"> Register </button>
+<!--     <button class="button" value="Register" onclick="doReg();" id="button-reg"> Register </button> -->
+<button class="button" value="Register" id="button-reg"> Register </button>
+
 </center>
           </div>
           <span id="regAddResult"></span>
 <div class="signup-link">
+  <div id="see - local sotage">See whats being stored</div>
  <a href="index.html">Back to Log In Page</a></div>
 </form>
 
 </div>
+<script type="text/javascript" src="js/register.js"></script>
 </body>
 </html>
