--- a/src/LogIn (1).html
+++ b/src/LogIn (1).html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Contact</title> 
-    <script type="text/javascript" src="js/code.js"></script>
+    
     <script type="text/javascript" src="js/md5.js"></script>
     <link rel="stylesheet" href="css/landing.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -52,5 +52,6 @@ Not a member? <a href="Register.html">Signup now</a>
                 </form>
 
                 </div>
+                <script type="text/javascript" src="js/login.js"></script>
   </body>
 </html>
