Add Contact implementation
Created an add contact js for the newly aded section in the js landing page.

--- a/src/LogIn (1).html
+++ b/src/LogIn (1).html
@@ -47,6 +47,7 @@
                     <input type="submit" value="Login" id="logbutton" >
                 </div>
                     <div class="signup-link">
+                      <div id="error"></div>
 Not a member? <a href="Register.html">Signup now</a>
                 </div>
                 </form>
