--- a/src/Register.html
+++ b/src/Register.html
@@ -48,7 +48,7 @@ Signup Form</div>
 <center>
 <!--     <button class="button" value="Register" onclick="doReg();" id="button-reg"> Register </button> -->
 <button class="button" value="Register" id="button-reg"> Register </button>
-
+<div id="encoded"></div>
 </center>
           </div>
           <span id="regAddResult"></span>
