Fixed some minor changes, seems like the JSON being passed to php is invalid

--- a/src/index.html
+++ b/src/index.html
@@ -28,10 +28,10 @@
       <div class="form-inner">
           <form action="#" class="login">
             <div class="field">
-              <input type="text" placeholder="Username" id="loginName" required>
+              <input type="text" placeholder="Username" id="logUsername" required>
             </div>
             <div class="field">
-              <input type="password" placeholder="Password" id="loginPassword" required>
+              <input type="password" placeholder="Password" id="logPass" required>
             </div>
 <div class="pass-link">
 
