--- a/src/Register.html
+++ b/src/Register.html
@@ -27,7 +27,8 @@ Signup Form</div>
      
 </div>
 <div class="form-inner">
-        <form class="login">
+  <!--<form class="login"> -->
+        <form method="post" id="reg">
           <div class="field">
             <input type="text" placeholder="Username" id="logUsername" required>
           </div>
@@ -47,13 +48,13 @@ Signup Form</div>
 </div> -->
 <center>
 <!--     <button class="button" value="Register" onclick="doReg();" id="button-reg"> Register </button> -->
-<button class="button" value="Register" id="button-reg"> Register </button>
+<button type = "submit" class="button" value="Register" id="button-reg"> Register </button>
 <div id="encoded"></div>
 </center>
           </div>
           <span id="regAddResult"></span>
 <div class="signup-link">
-  <div id="see - local sotage">See whats being stored</div>
+ 
  <a href="index.html">Back to Log In Page</a></div>
 </form>
 
