--- a/html/index.html
+++ b/html/index.html
@@ -39,7 +39,7 @@
 
 
 <center>         
-<input type="submit" id="login-btn" onclick ="doLogin();" value="Login"> Login </button>
+<input type="submit" id="login-btn" value="Login">
 </center>
             </div>
             <span id="loginResult"></span>
