cleaned up login

--- a/html/index.html
+++ b/html/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
   <head>
     <meta charset="utf-8">
-    <title>Contact</title> 
-    <script type="text/javascript" src="js/login.js"></script>
+    <title>Contact</title>
     <link rel="stylesheet" href="css/login.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
+
   <body>
     <div class="logo">
       <img src="img/Contact.png" width=150 alt="contact logo">
     </div>
+
     <div class="wrapper">
+      
       <div class="title-text">
         <div class="title login">
           Login Form
@@ -20,11 +23,11 @@
           Signup Form
         </div>
       </div>
+
       <div class="hand">
-        <img src="img/Mask-Group-1.png" width="120">
-      </div>  
-      <div class="form-container">
-    </div>
+        <img src="img/Mask-Group-1.png" alt="hand" width="120">
+      </div> 
+
       <div class="form-inner">
           <form id="loginForm" class="login" method="post">
             <div class="field">
@@ -33,20 +36,22 @@
             <div class="field">
               <input type="password" placeholder="Password" id="loginPassword" required>
             </div>
-<div class="pass-link">
 
-<div class="field btn">
-
-
-<center>         
-<input type="submit" id="login-btn" value="Login">
-</center>
+            <div class="field btn">
+              <center>        
+                  <input type="submit" id="login-btn"value="Login">
+              </center>
             </div>
             <span id="loginResult"></span>
-<div class="signup-link">
-Not a member? <a href="Register.html">Signup now</a></div>
-  </form>
+            <div class="signup-link">
+               Not a member? 
+               <a href="Register.html">Signup now</a>
+            </div>
+          </form>
+    </div>
 
   </div>
+  <script type="text/javascript" src="js/login.js"></script>
   </body>
+
 </html>
