Error message vis

--- a/html/contactPage.html
+++ b/html/contactPage.html
@@ -53,6 +53,7 @@
             <div class="button-container">
               <div id="add-results"></div>
               <button type ="submit" id="add-contact" class="btn-1"> Add contact</button>
+              <div id='error'> </div>
             </div>
           </form>
           
