--- a/html/index.html
+++ b/html/index.html
@@ -5,12 +5,10 @@
     <meta charset="utf-8">
     <title>Contact</title>
     <link rel="stylesheet" href="css/login.css">
-    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
   <body>
-    
     <div class="logo">
       <img src="img/Contact.png" width=150 alt="contact logo">
     </div>
@@ -54,6 +52,7 @@
 
   </div>
   <script type="text/javascript" src="js/login.js"></script>
+  <script type="text/javascript" src="js/cookies.js"></script>
   </body>
 
 </html>
