Add Log Out button
Log Out button was added

--- a/html/contactPage.html
+++ b/html/contactPage.html
@@ -33,8 +33,8 @@
         </div>
       </form>
       <div class = "mod-button">
-        <button class="btn-2"> Delete Contact</button>
-        <button class="btn-3"> Edit Contact</button>
+        <button class="btn-2"> Log Out</button>
+       
       </div>
       
        <!--Let's input our forms here , one for adding contacts one for editing contacts-->
