displays text on failure of logging in

--- a/html/index.html
+++ b/html/index.html
@@ -27,6 +27,9 @@
       <div class="hand">
         <img src="img/Mask-Group-1.png" alt="hand" width="120">
       </div> 
+      <div id ="message" style ="display: none">
+        <center><p>wrong username or password</p></center>
+      </div>
 
       <div class="form-inner">
           <form id="loginForm" class="login" method="post">
