--- a/html/contactPage.html
+++ b/html/contactPage.html
@@ -19,6 +19,17 @@
       </div>
       <button id="new-contact-bttn">NEW CONTACT</button>
     </div>
+    <div id="modal-container">
+      <div class="modal-blur"></div>
+      <div id="add-contact-modal">
+        <h2>Add Contacts</h2>
+        <input type="text" id="id-input" placeholder="ID">
+        <input type="text" id="fname-input" placeholder="First Name">
+        <input type="text" id="lname-input" placeholder="Last Name">
+        <input type="text" id="email-input" placeholder="Email">
+        <input type="text" id="phone-input" placeholder="Phone Number">
+      </div>
+    </div>
     <script src="js/cookies.js"></script>
     <script src="js/contacts.js"></script>
   </body>
