--- a/html/contactPage.html
+++ b/html/contactPage.html
@@ -14,24 +14,31 @@
       </div>
       <div id="table-container">
         <table id="contact-table">
-          <tr><th>First Name</th><th>Last Name</th><th>Phone</th><th>Email</th><th>Date Created</th><th></th></tr>
+          <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Phone</th>
+            <th>Email</th>
+            <th id="action-button-column"></th>
+          </tr>
         </table>
       </div>
-      <button id="new-contact-bttn">NEW CONTACT</button>
+      <button id="new-contact-button">NEW CONTACT</button>
     </div>
     <div id="modal-container">
-      <div class="modal-blur"></div>
-      <div id="add-contact-modal">
+      <form id="add-contact-modal">
+        <button class="close-button"><img src="img/close-icon.png" alt="close"></button>
         <h2>Add Contacts</h2>
-        <input type="text" id="id-input" placeholder="ID">
-        <input type="text" id="fname-input" placeholder="First Name">
+        <input type="text" required id="fname-input" placeholder="First Name *">
         <input type="text" id="lname-input" placeholder="Last Name">
         <input type="text" id="email-input" placeholder="Email">
-        <input type="text" id="phone-input" placeholder="Phone Number">
-      </div>
+        <input type="text" required id="phone-input" placeholder="Phone Number *">
+        <button type="submit" name="submit" id="add-contact-button">ADD CONTACT</button>
+      </form>
     </div>
     <script src="js/cookies.js"></script>
     <script src="js/contacts.js"></script>
+    <script src="js/addContact.js"></script>
   </body>
 </html>
 
