--- a/html/index.html
+++ b/html/index.html
@@ -54,6 +54,7 @@
     </div>
 
   </div>
+  <script type="text/javascript" src="js/sha256.js"></script>
   <script type="text/javascript" src="js/login.js"></script>
   <script type="text/javascript" src="js/cookies.js"></script>
   </body>
