Added login error messages and favicons

--- a/html/contactPage.html
+++ b/html/contactPage.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="icon" href="img/favicon.svg">
     <link rel="stylesheet" href="css/contactPage.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Add Contacts</title>
+    <title>Contax</title>
   </head>
   <body>
     <div id="contact-container">
+      <button id="logout-button">Logout</button>
       <h1>Contact List</h1>
       <div id="search-container">
         <img src="img/user.png" alt="user icon">
