Updated logo to each page

--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="logo">
-      <img src="img/Contact.png" width="150" alt="contact logo" />
+      <img src="img/contax.svg" width="150" alt="contact logo" />
     </div>
     <div class="wrapper">
       <div class="title-text">
