--- a/html/Register.html
+++ b/html/Register.html
@@ -59,6 +59,8 @@ Signup Form</div>
 </form>
 
 </div>
+<script type="text/javascript" src="js/sha256.js"></script>
+<script type="text/javascript" src="js/cookies.js"></script>
 <script type="text/javascript" src="js/register.js"></script>
 </body>
 </html>
