--- a/html/contactPage.html
+++ b/html/contactPage.html
@@ -8,11 +8,12 @@
   </head>
   <body>
     <div id="contact-container">
-      <button id="logout-button">Logout</button>
+      <button id="logout-button" onclick="doLogout()">Logout</button>
       <h1>Contact List</h1>
       <div id="search-container">
-        <img src="img/user.png" alt="user icon">
+        <img id="user-icon" src="img/user.png" alt="user icon">
         <input type="text" id="contact-search-input" placeholder="Search Person">
+        <button id="mic-button" onclick="startSpeechRec()"><img src="img/mic.png" alt=""></button>
       </div>
       <div id="table-container">
         <table id="contact-table">
@@ -21,6 +22,7 @@
             <th>Last Name</th>
             <th>Phone</th>
             <th>Email</th>
+            <th>Date Created</th>
             <th id="action-button-column"></th>
           </tr>
         </table>
@@ -31,6 +33,7 @@
       <form id="add-contact-modal">
         <button class="close-button"><img src="img/close-icon.png" alt="close"></button>
         <h2>Add Contacts</h2>
+        <p id="error-message"></p>
         <input type="text" required id="fname-input" placeholder="First Name *">
         <input type="text" id="lname-input" placeholder="Last Name">
         <input type="text" id="email-input" placeholder="Email">
@@ -43,4 +46,3 @@
     <script src="js/addContact.js"></script>
   </body>
 </html>
-
